--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
     <div class="accordion">
         <h2 class="accordion-title">Frequently Asked Questions</h2>
         <div class="content-container">
-            <div class="question">What is the return policy?</div>
-            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores accusamus ut iste
-                laudantium, exercitationem ea hic omnis enim beatae, nam ratione, fuga praesentium molestias deleniti
-                voluptas quia facilis nobis ipsa officiis. Velit nesciunt qui est distinctio voluptates excepturi. Quae
-                doloremque veritatis earum ipsum culpa illum.</div>
+            <div class="question">Who is Garima?</div>
+            <div class="answer">Ritu Raj ki maal.</div>
         </div>
         <div class="content-container">
             <div class="question">What is the return policy?</div>
