--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="accordion">
         <h2 class="accordion-title">Frequently Asked Questions</h2>
         <div class="content-container">
-            <div class="question">Who is Garima?</div>
-            <div class="answer">Ritu Raj ki maal.</div>
+            <div class="question">What is time?</div>
+            <div class="answer">I dont know.</div>
         </div>
         <div class="content-container">
             <div class="question">What is the return policy?</div>
